# pdf_utils_naveen_mcp

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  app.py  config.py  create_test_pdf.py  main.py  pyproject.toml
modal_app/: adapters.py  deepseek_ocr.py  ocr_app.py
src/pdf_mcp_server/: __init__.py  server.py  tools.py
src/pdf_utils/: __init__.py  config.py
src/web_app/: app.py  cli.py
src/web_app/core/: database.py  session_settings.py  utils.py
src/web_app/prompts/: math_detection_prompt.txt  ocr_prompt.txt  ocr_prompt_pdf.txt  url_pdf_quality_check.txt
src/web_app/routes/: api.py  main.py  pdf.py  url.py
src/web_app/services/: cleanup.py  deepseek_ocr_service.py  gcs_service.py  modal_ocr_service.py  ocr_cache.py  ocr_service.py  pdf_service.py  pptx_service.py  url_pdf_service.py  url_service.py
src/web_app/ui/: components.py  styles.py
tests/: __init__.py  test_ocr_service.py
