[project]
name = "pdf-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for PDF manipulation using PyMuPDF"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Naveen Reddy", email = "naveenreddy61@gmail.com" }
]
dependencies = [
    "fastmcp>=2.10.6",
    "litellm>=1.75.0",
    "pillow>=11.3.0",
    "PyMuPDF>=1.24.0",
    "pymupdf4llm>=0.0.27",
    "python-dotenv>=1.1.1",
    "python-fasthtml>=0.9.0",
    "pyyaml>=6.0.2",
    "tiktoken>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/naveenreddy61/anki_nav_mcp_server"
Repository = "https://github.com/naveenreddy61/anki_nav_mcp_server.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pdf-mcp-server = "pdf_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_mcp_server"]

[tool.uv]
package = true
